# audio-i2s-sdmmc-nrf5340-async

./: Cargo.toml  README.md
.cargo/: config.toml
src/: file_reader.rs  main.rs  stats.rs
